--- a/info.html
+++ b/info.html
@@ -80,7 +80,7 @@
         <a href="https://forms.gle/7pj1QSx88db1fuba8" class="nav-btn" target="_blank">お問い合わせ</a>
         
         <button class="nav-btn" id="theme-toggle">
-            <span style="margin-right:8px">🌙</span>常闇モード
+            <span style="margin-right:8px">🌙</span>モード切替
         </button>
     </nav>
 
