--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="google-site-verification" content="nspDi4qQ83TID9WMpEf9JUCo5P42bi2hEo3hXdRu-vY" />
     <title>なおまの研究所</title>
+    <meta name="robots" content="index, follow">
     <meta name="description" content="なおまが運営する、VercelとGitHubを駆使した技術検証用サイト。ここでは日々、新たな術が開発されている。">
     <link rel="canonical" href="https://naomasite.vercel.app/">
     <script defer src="/_vercel/insights/script.js"></script>
