--- a/kenkyu-2.html
+++ b/kenkyu-2.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>なおまの研究所 - 2</title>
+    <meta name="robots" content="index, follow">
     <meta name="description" content="これはもう１つの研究所だ。">
     <style>
         body { background: #000; color: #0f0; font-family: 'Consolas', monospace; padding: 50px; text-align: center; }
