--- a/privacy.html
+++ b/privacy.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>なおまの研究所 - 利用規約・プライバシーポリシー</title>
+    <meta name="robots" content="index, follow">
     <style>
         :root {
             --bg: #0d1117;
