--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <title>なおまの研究所</title>
     <meta name="robots" content="index, follow">
     <meta name="description" content="なおまが運営する、VercelとGitHubを駆使した技術検証用サイト。ここでは日々、新たな術が開発されている。">
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-HN6YC5TWWS"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-HN6YC5TWWS');
+</script>
     <link rel="canonical" href="https://naomasite.vercel.app/">
     <script defer src="/_vercel/insights/script.js"></script>
     <style>
