--- a/kenkyu-2.html
+++ b/kenkyu-2.html
@@ -5,6 +5,15 @@
     <title>なおまの研究所 - 2</title>
     <meta name="robots" content="index, follow">
     <meta name="description" content="これはもう１つの研究所だ。">
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-HN6YC5TWWS"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-HN6YC5TWWS');
+</script>
     <style>
         body { background: #000; color: #0f0; font-family: 'Consolas', monospace; padding: 50px; text-align: center; }
         .warning { border: 2px solid #0f0; padding: 20px; display: inline-block; animation: blink 1s infinite; }
