--- a/info.html
+++ b/info.html
@@ -3,6 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>なおまの研究所 - お知らせ</title>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-HN6YC5TWWS"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-HN6YC5TWWS');
+</script>
     <style>
         :root {
             --bg: #0d1117;
