--- a/404.html
+++ b/404.html
@@ -3,6 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>404 - LOST IN THE ABYSS</title>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-HN6YC5TWWS"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-HN6YC5TWWS');
+</script>
     <style>
         body { background: #000; color: #f85149; font-family: 'Consolas', monospace; text-align: center; padding-top: 100px; overflow: hidden; }
         .glitch { font-size: 5rem; font-weight: bold; animation: glitch 1s linear infinite; }
