--- a/403.html
+++ b/403.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>403 - 閲覧禁止 | なおまの研究所</title>
+    <title>なおまの研究所 - 403</title>
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-HN6YC5TWWS"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -83,7 +83,7 @@
 <body>
 
     <nav>
-        <a href="/" class="nav-btn">トップページa>
+        <a href="/" class="nav-btn">トップページ</a>
         <a href="/info" class="nav-btn">お知らせ</a>
         <a href="/privacy" class="nav-btn">規約・ポリシー</a>
         <a href="/kenkyu-2" class="nav-btn">第2研究所</a>
