--- a/403.html
+++ b/403.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>なおまの研究所 - 403</title>
+    <meta name="robots" content="noindex, nofollow">
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-HN6YC5TWWS"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -95,10 +96,10 @@
         <p><strong>Forbidden</strong></p>
         <p>
             許可されていません！<br>
-            ここはなおまの秘密が隠れている...<br>
+            ここにはなおまの秘密が隠れている...<br>
             のかもしれません...
         </p>
-        <a href="/" class="nav-btn" style="margin-top: 20px; display: inline-block;">正門へ戻る</a>
+        <a href="/" class="nav-btn" style="margin-top: 20px; display: inline-block;">研究所トップページへ戻る</a>
     </div>
 
 </body>
