--- a/404.html
+++ b/404.html
@@ -2,7 +2,8 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <title>404 - LOST IN THE ABYSS</title>
+    <title>なおまの研究所 - 404</title>
+    <meta name="robots" content="noindex, nofollow">
     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-HN6YC5TWWS"></script>
 <script>
