--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             <button id="toggle-btn" onclick="toggleMode()">🌙 Mode Switch</button>
         </div>
 
-        <h4 class="memo"><a href="kenkyu-2.html">現在開発途中（第2研究室へ）</a></h4>
+        <h4 class="memo"><a href="kenkyu-2.html">現在開発途中（第2研究所へ）</a></h4>
 
         <header>
             <h1>> NAOMA_DEVELOPMENT_LOG</h1>
