--- a/kenkyu-2.html
+++ b/kenkyu-2.html
@@ -22,12 +22,11 @@
     </style>
 </head>
 <body>
-    <div class="warning">
-        <h1>まだここには何もありません。</h1>
-        <p>ここはなおまの研究所の最深部である。今はまだ開発中だ。</p>
-        <a href="https://naomasite.vercel.app/">こちらもよろしくお願いします。</a>
-    </div>
-    <br>
-    <a href="index.html">研究所トップページへ戻る</a>
-</body>
+    <div id="data-prison" style="font-family: 'Consolas', monospace; color: #0f0; background: #000; padding: 20px; border: 1px solid #0f0;">
+    <h2>リアルタイムモニター</h2>
+    <p>マウス座標: <span id="mouse-pos">X: 0, Y: 0</span></p>
+    <p>スクロール量: <span id="scroll-val">0</span> px</p>
+    <p>滞在秒数: <span id="timer-val">0</span> sec</p>
+    <p>クリック回数: <span id="click-count">0</span></p>
+</div>
 </html>
