--- a/kenkyu-2.html
+++ b/kenkyu-2.html
@@ -22,6 +22,7 @@
     </style>
 </head>
 <body>
+    <h1>ここは第２研究所です。</h1>
     <div id="data-prison" style="font-family: 'Consolas', monospace; color: #0f0; background: #000; padding: 20px; border: 1px solid #0f0;">
     <h2>リアルタイムモニター</h2>
     <p>マウス座標: <span id="mouse-pos">X: 0, Y: 0</span></p>
