--- a/kenkyu-2.html
+++ b/kenkyu-2.html
@@ -79,7 +79,7 @@ window.addEventListener('keydown', (e) => {
     try {
         localStorage.setItem('naoma_log', savedLog);
     } catch (err) {
-        console.error("記憶容量が限界です、城主！", err);
+        console.error("記憶容量が限界です。", err);
     }
 
     // 4. 視覚への投影
