--- a/privacy.html
+++ b/privacy.html
@@ -143,6 +143,9 @@
         
         <h3>第3条（お問い合わせ）</h3>
         <p>お問い合わせフォームより送信された御名およびメッセージ等の情報は、回答および本人確認のためにのみ利用し、適切に管理いたします。</p>
+
+        <h3>第4条（ブラウザへの記録について）</h3>
+　　　　　<p>当研究所の特定の実験棟（第2研究所等）では、利便性向上および研究目的のため、ユーザーの入力情報や挙動をブラウザの「localStorage」に記録する場合のがあります。これらのデータはユーザーの端末内にみ保存され、所長が直接サーバー等へ収集することはありません。ユーザーはブラウザのキャッシュを消去することで、これらの記録をいつでも抹消することが可能です。</p>
     </div>
 
     <div style="text-align: center;">
