--- a/kenkyu-2.html
+++ b/kenkyu-2.html
@@ -35,6 +35,10 @@
 </p>
 </div>
 
+    <footer>
+        <a herf="https://naomasite.vercel.app/">研究所トップページに戻る</a>
+    </footer>
+
 <script>
   let clicks = 0;
   let seconds = 0;
