--- a/kenkyu-2.html
+++ b/kenkyu-2.html
@@ -36,7 +36,7 @@
 </div>
 
     <footer>
-        <a herf="https://naomasite.vercel.app/">研究所トップページに戻る</a>
+        <a href="https://naomasite.vercel.app/">研究所トップページに戻る</a>
     </footer>
 
 <script>
