--- a/kenkyu-2.html
+++ b/kenkyu-2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>なおまの研究所 - 2</title>
     <meta name="robots" content="index, follow">
-    <meta name="description" content="これはもう１つの研究所だ。">
+    <meta name="description" content="ここは第２研究所だ。"
     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-HN6YC5TWWS"></script>
 <script>
