--- a/kenkyu-2.html
+++ b/kenkyu-2.html
@@ -29,6 +29,7 @@
     <p>スクロール量: <span id="scroll-val">0</span> px</p>
     <p>滞在秒数: <span id="timer-val">0</span> sec</p>
     <p>クリック回数: <span id="click-count">0</span></p>
+    <p>アクセス端末: <span id="user-device" style="color: #0ff; font-weight: bold;">鑑定中...</span></p>
          <p>最後に押されたキー: <span id="last-key" style="color: #ff0; font-weight: bold;">NONE</span></p>
 <p>思考の蓄積（ログ）: <br>
     <span id="key-history" style="font-size: 0.8em; color: #888; word-wrap: break-word;">...waiting for input</span>
@@ -122,6 +123,25 @@ window.addEventListener('keydown', (e) => {
         console.warn("RESTRICTED ACCESS: Secret command 'naomanaoma' executed.");
     }
 });
+    window.addEventListener('load', () => {
+    const deviceDisp = document.getElementById('user-device');
+    const ua = navigator.userAgent;
+
+    let deviceType = "UNKNOWN";
+
+    // 鑑定の儀
+    if (ua.includes('Windows')) {
+        deviceType = "Windows PC";
+    } else if (ua.includes('iPhone') || ua.includes('iPad') || ua.includes('Android')) {
+        deviceType = "Mobile / Tablet";
+    } else if (ua.includes('Macintosh')) {
+        deviceType = "Mac PC";
+    } else {
+        deviceType = "Unknown Device";
+    }
+
+    deviceDisp.innerText = deviceType;
+        
     </script>
     
 </body>
