--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
             <div style="background: var(--box-bg); padding: 20px; border-radius: 8px; border: 1px solid var(--accent); text-align: center;">
                 <p style="font-size: 0.8rem; color: #8b949e; margin-bottom: 15px;">異国の刺客よ、このボタンでサイトの言葉を塗り替えよ。</p>
                 
-                <div id="google_translate_element" style="display: inline-block; padding: 10px; background: #000; border-radius: 4px;"></div>
+                <div id="google_translate_element" style="display: inline-block; padding: 10px; background: #fff; border-radius: 4px;"></div>
 
                 <script type="text/javascript">
                     function googleTranslateElementInit() {
