--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@
 <style>
     /* マウスを乗せた時だけ、静かに浮き上がる演出 */
     a[href]:hover {
-        color: #fff;
+        color: #0f0;
         text-shadow: 0 0 5px rgba(255,255,255,0.5);
     }
 </style>
