--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>なおまの研究所</title>
     <meta name="robots" content="index, follow">
     <meta name="description" content="なおまが運営する、VercelとGitHubを駆使した技術検証用サイト。ここでは日々、新たな術が開発されている。">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-HN6YC5TWWS"></script>
 <script>
