--- a/kenkyu-2.html
+++ b/kenkyu-2.html
@@ -5,6 +5,7 @@
     <title>なおまの研究所 - 2</title>
     <meta name="robots" content="index, follow">
     <meta name="description" content="ここは第２研究所だ。"
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-HN6YC5TWWS"></script>
 <script>
