--- a/info.html
+++ b/info.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>なおまの研究所 - お知らせ</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-HN6YC5TWWS"></script>
 <script>
