--- a/privacy.html
+++ b/privacy.html
@@ -114,7 +114,7 @@
 
     <div class="section-box">
         <h2>利用規約 (Terms of Service)</h2>
-        <p>本規約は、なおまの研究所（以下、「当研究所」）が提供するコンテンツの利用条件を定めるものです。注)当研究所は、Windows向けに作られたwebサイトであることから、モバイルなどでは一部動作が変わってしまう可能性があります。</p>
+        <p>本規約は、なおまの研究所（以下、「当研究所」）が提供するコンテンツの利用条件を定めるものです。注)当研究所は、Windows向けに作られたwebサイトであることから、モバイルなどでは一部動作や表示が変わってしまう可能性があります。</p>
         
         <h3>第1条（著作権）</h3>
         <p>当研究所に掲載されている全ての情報（文章、画像、コード等）の著作権は、所長（なおま）に帰属します。私的使用の範囲を超えて、無断で転載、複製、配布することを禁じます。</p>
