--- a/index.html
+++ b/index.html
@@ -471,6 +471,10 @@
         お問い合わせフォーム
     </a>
 
+　　<a href="https://forms.gle/mqBcoGeCvTnsmWEc8" style="color: #999; text-decoration: none; font-family: sans-serif; letter-spacing: 1px; transition: 0.3s;">
+        バグ（問題）報告
+    </a>
+    
     <a href="privacy.html" style="color: #999; text-decoration: none; font-size: 0.85rem; font-family: sans-serif; letter-spacing: 1px; transition: 0.3s;">
         利用規約・プライバシーポリシー
     </a>
