--- a/kenkyu-2.html
+++ b/kenkyu-2.html
@@ -4,7 +4,24 @@
     <meta charset="UTF-8">
     <title>なおまの研究所 - 2</title>
     <meta name="robots" content="index, follow">
-    <meta name="description" content="ここは第２研究所だ。"
+    <meta name="description" content="ここは第２研究所だ。">
+    <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "BreadcrumbList",
+  "itemListElement": [{
+    "@type": "ListItem",
+    "position": 1,
+    "name": "なおまの研究所",
+    "item": "https://naomasite.vercel.app/"
+  },{
+    "@type": "ListItem",
+    "position": 2,
+    "name": "なおまの研究所 - 2",
+    "item": "https://naomasite.vercel.app/kenkyu-2"
+  }]
+}
+</script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-HN6YC5TWWS"></script>
