--- a/info.html
+++ b/info.html
@@ -4,6 +4,21 @@
     <meta charset="UTF-8">
     <title>なおまの研究所 - お知らせ</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    {
+  "@context": "https://schema.org",
+  "@type": "BreadcrumbList",
+  "itemListElement": [{
+    "@type": "ListItem",
+    "position": 1,
+    "name": "なおまの研究所",
+    "item": "https://naomasite.vercel.app/"
+  },{
+    "@type": "ListItem",
+    "position": 2,
+    "name": "お知らせ",
+    "item": "https://naomasite.vercel.app/info"
+  }]
+}
     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-HN6YC5TWWS"></script>
 <script>
