--- a/kenkyu-2.html
+++ b/kenkyu-2.html
@@ -17,7 +17,7 @@
   },{
     "@type": "ListItem",
     "position": 2,
-    "name": "なおまの研究所 - 2",
+    "name": "第２研究所",
     "item": "https://naomasite.vercel.app/kenkyu-2"
   }]
 }
