--- a/privacy.html
+++ b/privacy.html
@@ -3,7 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>なおまの研究所 - 利用規約・プライバシーポリシー</title>
+    <title>なおまの研究所 - 規約・ポリシー</title>
+    {
+  "@context": "https://schema.org",
+  "@type": "BreadcrumbList",
+  "itemListElement": [{
+    "@type": "ListItem",
+    "position": 1,
+    "name": "なおまの研究所",
+    "item": "https://naomasite.vercel.app/"
+  },{
+    "@type": "ListItem",
+    "position": 2,
+    "name": "規約・ポリシー",
+    "item": "https://naomasite.vercel.app/privacy"
+  }]
+}
     <meta name="robots" content="index, follow">
     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-HN6YC5TWWS"></script>
