--- a/kenkyu-2.html
+++ b/kenkyu-2.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <title>なおまの研究所 - 2</title>
+    <title>なおまの第２研究所</title>
     <meta name="robots" content="index, follow">
     <meta name="description" content="ここは第２研究所だ。">
     <script type="application/ld+json">
@@ -17,7 +17,7 @@
   },{
     "@type": "ListItem",
     "position": 2,
-    "name": "第２研究所",
+    "name": "なおまの第２研究所",
     "item": "https://naomasite.vercel.app/kenkyu-2"
   }]
 }
