--- a/info.html
+++ b/info.html
@@ -15,7 +15,7 @@
   },{
     "@type": "ListItem",
     "position": 2,
-    "name": "お知らせ",
+    "name": "なおまの研究所 - お知らせ",
     "item": "https://naomasite.vercel.app/info"
   }]
 }
