--- a/info.html
+++ b/info.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>なおまの研究所 - お知らせ</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <script type="application/ld+json">
     {
   "@context": "https://schema.org",
   "@type": "BreadcrumbList",
@@ -19,6 +21,7 @@
     "item": "https://naomasite.vercel.app/info"
   }]
 }
+</script>
     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-HN6YC5TWWS"></script>
 <script>
