--- a/privacy.html
+++ b/privacy.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>なおまの研究所 - 規約・ポリシー</title>
-    {
+
+    <script type="application/ld+json">
+{
   "@context": "https://schema.org",
   "@type": "BreadcrumbList",
   "itemListElement": [{
@@ -15,10 +17,11 @@
   },{
     "@type": "ListItem",
     "position": 2,
-    "name": "規約・ポリシー",
+    "name": "なおまの研究所 - 規約・ポリシー",
     "item": "https://naomasite.vercel.app/privacy"
   }]
 }
+</script>
     <meta name="robots" content="index, follow">
     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-HN6YC5TWWS"></script>
