--- a/kenkyu-2.html
+++ b/kenkyu-2.html
@@ -55,7 +55,7 @@
 </div>
 
     <footer>
-        <a href="https://naomasite.vercel.app/">研究所トップページに戻る</a>
+        <a href="https://naomasite.vercel.app/">研究所トップページへ戻る</a>
     </footer>
 
 <script>
