--- a/info.html
+++ b/info.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>なおまの研究所 - お知らせ</title>
+     <meta name="description" content="なおまの研究所についてのお知らせを掲載しています。">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <script type="application/ld+json">
