--- a/privacy.html
+++ b/privacy.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>なおまの研究所 - 規約・ポリシー</title>
+    <meta name="description" content="利用規約とプライバシーポリシーを掲載しています。">
 
     <script type="application/ld+json">
 {
