--- a/index.html
+++ b/index.html
@@ -16,6 +16,14 @@
 
   gtag('config', 'G-HN6YC5TWWS');
 </script>
+    <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebSite",
+  "name": "なおまの研究所",
+  "url": "https://naoma-lab-2.vercel.app/"
+}
+</script>
     <link rel="canonical" href="https://naomasite.vercel.app/">
     <script defer src="/_vercel/insights/script.js"></script>
     <style>
