--- a/privacy.html
+++ b/privacy.html
@@ -167,6 +167,16 @@
 　　　　　<p>当研究所の特定の実験棟（第2研究所等）では、利便性向上および研究目的のため、ユーザーの入力情報や挙動をブラウザの「localStorage」に記録する場合があります。これらのデータはユーザーの端末内にみ保存され、所長が直接サーバー等へ収集することはありません。ユーザーはブラウザのキャッシュを消去することで、これらの記録をいつでも抹消することが可能です。</p>
     </div>
 
+    <div class="section-box">
+        <h2>所長（なおま）について</h2>
+        <p>WebやAIを中心に、思考と実験を重ねる個人研究者。
+「作ってみる・試してみる・考えてみる」を軸に、
+学びの過程そのものを記録するためにこの研究所を運営しています。
+商用目的ではなく、趣味と探究心から生まれた実験場です。
+ご連絡はお問い合わせフォームからどうぞ。</p>
+
+    </div>
+
     <div style="text-align: center;">
         <a href="index.html" class="back-link">研究所メインページへ戻る</a>
     </div>
