--- a/privacy.html
+++ b/privacy.html
@@ -175,7 +175,7 @@
 商用目的ではなく、趣味と探究心から生まれた実験場です。
 ご連絡はお問い合わせフォームからどうぞ。</p>
 
-        <h4><a herf="https://forms.gle/ZLJb7Y3YHgBiNNSg6">お問い合わせフォーム</a></h4>
+        <h4><a href="https://forms.gle/ZLJb7Y3YHgBiNNSg6">お問い合わせフォームはこちら</a></h4>
 
     </div>
 
