--- a/privacy.html
+++ b/privacy.html
@@ -175,7 +175,12 @@
 商用目的ではなく、趣味と探究心から生まれた実験場です。
 ご連絡はお問い合わせフォームからどうぞ。</p>
 
-        <h4><a href="https://forms.gle/ZLJb7Y3YHgBiNNSg6">お問い合わせフォームはこちら</a></h4>
+        <h4>
+  <a href="https://forms.gle/ZLJb7Y3YHgBiNNSg6" 
+     style="color: #58a6ff; background: rgba(0,0,0,0.3); padding: 5px 10px; border-radius: 5px; text-decoration: none; font-weight: bold;">
+     お問い合わせフォームはこちら
+  </a>
+</h4>
 
     </div>
 
