--- a/privacy.html
+++ b/privacy.html
@@ -177,7 +177,7 @@
 
         <h4>
   <a href="https://forms.gle/ZLJb7Y3YHgBiNNSg6" 
-     style="color: #58a6ff; background: rgba(0,0,0,0.3); padding: 5px 10px; border-radius: 5px; text-decoration: none; font-weight: bold;">
+     style="color: #58a6ff; padding: 5px 10px; border-radius: 5px; text-decoration: none; font-weight: bold;">
      お問い合わせフォームはこちら
   </a>
 </h4>
