--- a/404.html
+++ b/404.html
@@ -31,7 +31,7 @@
     </style>
 </head>
 <body>
-    <div class="glitch">404</div>
+    <div class="glitch"><a href="/">404</a></div>
     <div class="msg">ERROR:お探しのページは見つかりませんでした。</div>
     <br><br>
     <p><a href="index.html">研究所トップページへ戻る</a></p>
