--- a/privacy.html
+++ b/privacy.html
@@ -175,12 +175,14 @@
 商用目的ではなく、趣味と探究心から生まれた実験場です。
 ご連絡はお問い合わせフォームからどうぞ。</p>
 
+        <div style="text-align: center;">
         <h4>
   <a href="https://forms.gle/ZLJb7Y3YHgBiNNSg6" 
      style="color: #58a6ff; padding: 5px 10px; border-radius: 5px; text-decoration: none; font-weight: bold;">
      お問い合わせフォームはこちら
   </a>
 </h4>
+        </div>
 
     </div>
 
