--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@
         </section>
 
         <div id="bbs-area" style="border: 2px solid #333; padding: 20px; margin-top: 50px; background: #0f0;">
-    <h3>📜 研究所・自由に書ける掲示板</h3>
+    <h3 style="color: black;">📜 研究所・自由に書ける掲示板</h3>
     <input type="text" id="username" placeholder="名前" style="width: 100px;">
     <input type="text" id="message" placeholder="メッセージを書く" style="width: 250px;">
     <button id="send-btn">送信</button>
