--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@
             <p class="memo">※解説：JS不使用。CSSのホバーアクションとtranslateXのみで「開門」を表現。</p>
         </section>
 
-        <div id="bbs-area" style="border: 2px solid #333; padding: 20px; margin-top: 50px; background: #0f0;">
+        <div id="bbs-area" style="border: 2px solid #333; padding: 20px; margin-top: 50px; background: #00f;">
     <h3 style="color: black;">📜 研究所・自由に書ける掲示板</h3>
     <input type="text" id="username" placeholder="名前" style="width: 100px;">
     <input type="text" id="message" placeholder="メッセージを書く" style="width: 250px;">
